# P2300

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cmake.yml
include/: execution.hpp  functional.hpp
include/p2300/: callable.hpp  movable_value.hpp  non_associated.hpp  operation_state.hpp  set_error.hpp  set_stopped.hpp  set_value.hpp  start.hpp  tag_invoke.hpp
std-headers/: execution  execution.hpp  functional
test/: call_result_t.cpp  callable.cpp  movable_value.cpp  non_associated.cpp  nothrow_callable.cpp  operation_state.cpp  set_error.cpp  set_stopped.cpp  set_value.cpp  start.cpp  tag_invoke.cpp  test-config.hpp
